--- a/index.html
+++ b/index.html
@@ -1,4 +1,16 @@
 <html>
-    <script src="https://aframe.io/releases/0.6.1/aframe.min.js"></script>
-    <script src="https://jeromeetienne.github.io/AR.js/aframe/build/aframe-ar.js"></script>
+    <head>
+        <style>
+            body {
+              margin: 0px;
+              overflow: hidden;
+            }  
+          </style>
+          <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no,minimum-scale=1,maximum-scale=1">
+    </head>
+    <body>
+        <button id="start"> start</button>
+        <script src="https://aframe.io/releases/0.6.1/aframe.min.js"></script>
+        <script src="https://jeromeetienne.github.io/AR.js/aframe/build/aframe-ar.js"></script>
+    </body>
 </html>
