--- a/index.html
+++ b/index.html
@@ -4,12 +4,30 @@
             body {
               margin: 0px;
               overflow: hidden;
-            }  
+              display: flex;
+              justify-content: center;
+              align-items: center;
+            }
+            button {
+              width: 100%;
+              height: 40px;
+            }
+            #description {
+              display: flex;
+              flex-direction: column;
+              align-items: center;
+            }
           </style>
           <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no,minimum-scale=1,maximum-scale=1">
     </head>
     <body>
-        <button id="start"> start</button>
+        <div id="description">
+          <div>今日から始めるTensorFlow.js！で紹介したAR.jsとTensorFlow.jsを組み合わせたアプリです</div>
+          <div>startボタンを押すことで開始できます。</div>
+          <div>マーカーをカメラで写すことでキャラクターが表示できます</div>
+          <a href="https://github.com/jeromeetienne/AR.js/blob/master/data/images/HIRO.jpg">マーカーはこちらを参照</a>
+          <button id="start">start</button>
+        </div>
         <script src="https://aframe.io/releases/0.6.1/aframe.min.js"></script>
         <script src="https://jeromeetienne.github.io/AR.js/aframe/build/aframe-ar.js"></script>
     </body>
